--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "~2.8|~3.0"
+        "symfony/framework-bundle": "~2.8||~3.0"
     },
     "autoload": {
         "psr-4": { "Positibe\\Bundle\\UniqueViewsBundle\\": "" }
